--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddActivity"
+        <activity android:name=".activitys.AddActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
